--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-tangerine">
+				<h1 class="text-center hero-bloc-text dark-tangerine">
 					Parlons web design !
 				</h1>
 				<p class="text-center mg-lg tc-white tight-width-whitespace">
@@ -106,7 +106,7 @@
 						</label>
 						<textarea id="message" name="message" class="form-control" rows="4" cols="50" aria-label="champ du formualire pour donner des détails de votre projet" required></textarea>
 					</div>
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+					<button class="bloc-button btn btn-lg btn-block cta-hero dark-tangerine" type="submit">
 						Envoyer
 					</button>
 				</form>
