--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="La Panthère est une entreprise de weddesign à Lyon qui accompage les entreprises à devenir attractives grâce à un site Internet d'excellente qualité">
+    <meta name="description" content="La Panthère est une entreprise de weddesign à Lyon qui accompagne les entreprises à devenir attractives grâce à un site Internet d'excellente qualité">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="./img/favicon.webp">
