--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@
 
 <main class="page-container">
  
-<header class="bloc bgc-white l-bloc ">
+<header class="bloc bgc-white l-bloc" id="bloc-0">
 	<a class="navbar-brand logo-w3c-css" href="http://jigsaw.w3.org/css-validator/check/referer">
 		<img class="logocss" 
 			src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
 			alt="CSS Valide !"></a> 
 	<div class="container bloc-sm">
 		<nav class="navbar row">				
-			<div class="navbar-header">
-				
+			<div class="navbar-header">	
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy" alt="logo la panthère entreprise webdesigne Lyon" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span>
@@ -63,7 +62,7 @@
 
 <!-- bloc-1-presentation -->
 	
-	 <section class="bloc bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax">
+	 <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
