--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 
 <!-- bloc-1-presentation -->
 	
-	 <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo la panthère entreprise webdesign Lyon">
-				<h1 class="text-center hero-bloc-text tc-white">
+				<h1 class="text-center hero-bloc-text white">
 					Agence La Panthère<br>Entreprise webdesign Lyon
 				</h1>
 			</div>
@@ -196,11 +196,10 @@
 		</div>
 	</div>
 </section><!-- bloc-4-portfolio -->
-<!--  CD Suppression de la class texture-paper -->
-	<section id="bloc-5-cta" class="bloc d-bloc bloc-bg-texture bg-banniere">
+<div id="bloc-5-cta" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h2 class="mg-md text-center white">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 		</div>
