--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="La Panthère est une entreprise de weddesign à Lyon qui accompagne les entreprises à devenir attractives grâce à un site Internet d'excellente qualité">
+    <meta name="description" content="La Panthère est une entreprise de web design à Lyon qui accompagne les entreprises à devenir attractives grâce à un site Internet d'excellente qualité">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="./img/favicon.webp">
@@ -17,7 +17,7 @@
 	<script defer src="./js/jqBootstrapValidation.min.js"></script>
 	<script defer src="./js/formHandler.min.js"></script>
 
-    <title>contact - La Panthère entreprise webdesign Lyon</title> 
+    <title>contact - La Panthère entreprise web design Lyon</title> 
 
 <!-- Analytics -->
  <!-- Google tag (gtag.js) -->
@@ -43,7 +43,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo la panthère entreprise webdesigne Lyon" height="40"></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo la panthère entreprise web design Lyon" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -59,8 +59,8 @@
 	</div>
 </header>
 
-<!-- bloc-6 -->
-<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
@@ -74,10 +74,9 @@
 			</div>
 		</div>
 	</div>
-</div>
-<!-- bloc-6 END -->
-<!-- bloc-7 -->
-<div class="bloc bgc-white l-bloc" id="bloc-7">
+</section> <!-- bloc-6 -->
+
+<section class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
@@ -119,8 +118,8 @@
 			</div>
 		</div>
 	</div>
-</div>
-<!-- bloc-7 END -->
+</section> <!-- bloc-7 -->
+
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
