--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="La Panthère est une entreprise de weddesign à Lyon qui accompagne les entreprises à devenir attractives grâce à un site Internet d'excellente qualité">
+    <meta name="description" content="La Panthère est une entreprise de web design à Lyon qui accompagne les entreprises à devenir attractives grâce à un site Internet d'excellente qualité">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="./img/favicon.webp">
@@ -17,7 +17,7 @@
 	<script defer src="./js/jquery.touchSwipe.min.js"></script>
 	<script defer src="./js/gmaps.min.js"></script>
 
-    <title>accueil - La Panthère entreprise webdesign Lyon</title>
+    <title>accueil - La Panthère entreprise web design Lyon</title>
 
 <!-- Analytics -->
 <!-- Google tag (gtag.js) -->
@@ -43,7 +43,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">				
 			<div class="navbar-header">	
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy" alt="logo la panthère entreprise webdesigne Lyon" height="40"></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy" alt="logo la panthère entreprise web design Lyon" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span>
 					<span class="icon-bar"></span><span class="icon-bar"></span>
@@ -66,9 +66,9 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo la panthère entreprise webdesign Lyon">
+				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo la panthère entreprise web design Lyon">
 				<h1 class="text-center hero-bloc-text white">
-					Agence La Panthère<br>Entreprise webdesign Lyon
+					Agence La Panthère<br>Entreprise web design Lyon
 				</h1>
 			</div>
 		</div>
